# SENTCO

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.MD  README.md  SentienceAI-RefactorPlanStep-by-StepInstructions.MD  eveai.txt  pyproject.toml  sentience-api-server.py  sentience-cache.py  sentience-cli.py  sentience-config.py  sentience-docs-index.md  sentience-esi-client.py  sentience-init.py  sentience-prospectus.md  sentience-setup.md  sentience-test-config.py  sentience-test-gpt.py  sentience-utils-init.py  sentience-web-api.py
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  question.md
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: mkdocs.yml  projects.md  sentience-setup.md
examples/: README.md
scripts/: rename-master-to-main.sh  setup_github_projects.sh
src/sentience/: __init__.py  core.py  core_old.py  gpt_orchestrator.py  models.py
src/sentience/api/: __init__.py  openapi.py  server.py
src/sentience/cli/: __init__.py  __main__.py  cli.py
src/sentience/utils/: __init__.py  config.py  token_manager.py
tests/: __init__.py  test_cache.py  test_config.py  test_core.py  test_esi.py  test_token_manager.py
